# lsp_client

./: .clang-format  CMakeLists.txt  project.4coder
client/: CMakeLists.txt
client/include/lsp/: client.h  reader.h  request_hash_table.h  types.h  writer.h
client/src/: main.cpp
client/src/lsp/: client.cpp  reader.cpp  request_hash_table.cpp  types.cpp  writer.cpp
libs/std/: CMakeLists.txt
libs/std/include/std/: characters.h  iterator.h  math.h  memory.h  strings.h  types.h
libs/std/include/std/concurrency/: mutex.h  mutex_win32.h
libs/std/src/: iterator.cpp  memory.cpp  strings.cpp
libs/std/src/concurrency/: mutex.cpp  mutex_win32.cpp
scripts/: format.ps1
tests/: CMakeLists.txt  all.cpp  tests.h
tests/std/: all.cpp  std_characters_tests.cpp  std_iterator_tests.cpp  std_memory_tests.cpp  std_strings_tests.cpp
